--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
 build
 .idea
 .gradle
+.iml
+bin/
+.project
+.classpath
+.settings/
+target/*
+.idea/
+*.iml
+out/
+dependency-reduced-pom.xml
+.DS_Store
