--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,45 @@
   <groupId>com.testvagrant.codingRound</groupId>
   <artifactId>codoingRound</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <profiles>
+  <profile>
+    <id>cleartrip</id>
+    <build>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.6.1</version>
+          <configuration>
+            <source>1.8</source>
+            <target>1.8</target>
+            <encoding>UTF-8</encoding>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.20</version>
+          <executions>
+            <execution>
+              <id>execution1</id>
+              <phase>test</phase>
+              <configuration>
+                <forkMode>once</forkMode>
+                <suiteXmlFiles>
+                  <suiteXmlFile>testNG.xml</suiteXmlFile>
+                </suiteXmlFiles>
+              </configuration>
+              <goals>
+                <goal>test</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+      </plugins>
+    </build>
+  </profile>
+  </profiles>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -23,6 +62,11 @@
       <artifactId>testng</artifactId>
       <version>6.11</version>
       <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>6.9.10</version>
     </dependency>
   </dependencies>
 </project>
